--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="#" target="_blank">Silvia fantuzzi</a> and is
+          <a href="https://github.com/SilviaFantuzzi/First-Weather-App" target="_blank"> on GitHub</a> and
+          <a href="https://soft-dango-83c1f9.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
