--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="#" target="_blank">Silvia fantuzzi</a> and is
           <a href="https://github.com/SilviaFantuzzi/First-Weather-App" target="_blank"> on GitHub</a> and
-          <a href="https://soft-dango-83c1f9.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://www.netlify.com/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
