--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Silvia fantuzzi</a> and is
+          <a href="https://github.com/SilviaFantuzzi" target="_blank">Silvia fantuzzi</a> and is
           <a href="https://github.com/SilviaFantuzzi/First-Weather-App" target="_blank"> on GitHub</a> and
           <a href="https://www.netlify.com/" target="_blank">hosted on Netlify</a>
         </p>
